--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             A Software Developer by day
             <br><b>Security Enthusiast</b> by night
 
-            <a href="https://www.github.com/im4vk " class="github-button ">Fork me on GitHub</a>
+            <a href="https://www.github.com/im4vk " target="_blank" class="github-button ">Fork me on GitHub</a>
         </div>
 
     </div>
@@ -109,7 +109,7 @@
         <div class="container resume">
             <div class="middle-text">
                 My resume can be downloaded from
-                <a href="includes/files/resume.pdf">here</a>.
+                <a href="includes/files/resume.pdf" target="_blank" >here</a>.
                 <!-- The latex files are uploaded on
                 <a href="https://github.com/fat-fighter/resume">my github</a>. -->
             </div>
