--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Avinash</title>
-    <link rel="icon" type="image/x-icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRP6VhXB2tcqYOWyKBgwUzMt-GJRmcnUX0vvA&s">
+    <link rel="icon" type="image/x-icon" href="https://avatarfiles.alphacoders.com/364/thumb-1920-364185.png">
+<!--     "/includes/images/avatar.png"> -->
 
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/header.css">
