--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Avinash</title>
-    <link rel="icon" type="image/x-icon" href="https://avatarfiles.alphacoders.com/364/thumb-1920-364185.png">
-<!--     "/includes/images/avatar.png"> -->
+    <link rel="icon" type="image/x-icon" href="/includes/images/title.png">
 
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/header.css">
