--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Avinash</title>
-    <link rel="icon" type="image/x-icon" href="/includes/images/title.png">
+    <link rel="icon" type="image/x-icon" href="https://wallpapers.com/images/hd/sharingan-eye-graphic-lsw5eyotfsmzqjqk.jpg">
 
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/header.css">
